--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -105,7 +105,7 @@ Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||
 * Greek: {{t+|el|παλεύω}}, {{t+|el|μάχομαι}}
 *: Ancient: {{t|grc|μάχομαι}}
 * Hebrew: {{t+|he|רָב|tr=rav}}, {{t+|he|נֶאֱבַק|tr=ne'evák}}, {{t+|he|נִלְחַם|tr=nilkhám}}
-* Hindi: {{t+|hi|लड़ना}}, {{t+|hi|झगड़ना}}
+* Hindi: {{t|hi|लड़ना}}, {{t+|hi|झगड़ना}}
 * Hungarian: {{t+|hu|harcol}}, {{t+|hu|verekszik}}
 * Icelandic: {{t+|is|slást}}, {{t+|is|berjast}}
 * Indonesian: {{t+|id|kelahi}}, {{t+|id|tarung}}
@@ -131,6 +131,7 @@ Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||
 * Maltese: {{t|mt|ġlieda}}
 * Maori: {{t|mi|kakari}}, {{t|mi|whawhai}}
 * Mongolian: {{t+|mn|тэмцэх|sc=Cyrl}}
+* Nepali: {{t|ne|लड्नु}}
 * Norman: {{t|nrf|freûler|alt=s'freûler}} {{qualifier|Jersey}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|stridj}}
 * Norwegian: {{t+|no|slåss}}, {{t+|no|kjempe}}
