--- a/en/垔/垔.13080.wikitext
+++ b/en/垔/垔.13080.wikitext
@@ -5,7 +5,7 @@
 {{Han char|rn=32|rad=土|as=06|sn=9|four=10104|canj=MWG,XMWG|ids=⿱覀土(GV),⿱西土(HTJK)}} <!-- Different composition depending on region, GV for mainland China/Vietnam, HTJK for Hong Kong/Taiwan/Japan/Korea -->
 
 ====Derived characters====
-* [[堙]], [[湮]], [[凐]], [[歅]], [[禋]], [[緸]], [[陻]], [[諲]], [[闉]], [[黫]], [[鄄]], [[甄]], [[煙]], [[薽]]
+* {{l|mul|[[堙]], [[湮]], [[凐]], [[歅]], [[禋]], [[緸]], [[陻]], [[諲]], [[闉]], [[黫]], [[鄄]], [[甄]], [[煙]], [[薽]]}}
 
 ====References====
 * {{Han ref|kx=0228.291|dkj=05041|dj=0463.270|hdz=10438.010|uh=5794|ud=22420|bh=CE58|bd=52824}}
@@ -24,13 +24,13 @@
 |c=jan1
 |mc=y
 |oc=y
-|cat=
+|cat=v
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# to [[block up]]
+# {{zh-o}} to [[block up]]
 
 ----
 
