--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -1,4 +1,5 @@
-{{also|israel|Ísrael|Israèl|İsrael|Israël}}
+{{also|israel|Ísrael|Israèl|İsrael|Israël}}0559692456
+
 ==English==
 [[File:Flag of Israel.svg|thumb|Flag of the State of Israel]]
 [[File:Israel (orthographic projection) with disputed territories.svg|thumb|Location map of the State of Israel, with disputed territories shown in light green]]
