--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -1,11 +1,10 @@
-{{also|israel|Ísrael|Israèl|İsrael|Israël}}0559692456
-
+{{also|israel|Ísrael|Israèl|İsrael|Israël}}
 ==English==
 [[File:Flag of Israel.svg|thumb|Flag of the State of Israel]]
 [[File:Israel (orthographic projection) with disputed territories.svg|thumb|Location map of the State of Israel, with disputed territories shown in light green]]
 
 ===Alternative forms===
-* {{l|en|Isr.}} {{qualifier|abbreviation}}ج0559692456
+* {{l|en|Isr.}} {{qualifier|abbreviation}}
 
 ===Etymology===
 From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Israel}}, from {{der|en|grc|Ἰσραήλ}}, from {{der|en|he|יִשְׂרָאֵל||Israel|tr=yisra'él}}.<ref>{{R:Dictionary.com}}</ref><ref>{{R:MWO}}</ref> In the Bible, it is said to be from the name {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}} given to [[Jacob]] in {{RQ:Tanach|1|32|29}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". The personal name, already attested in [[Eblaite]] {{l|xeb|𒅖𒊏𒅋}} (''iš-ra-il'') and [[Ugaritic]] {{l|uga|𐎊𐎌𐎗𐎛𐎍}}<!-- as a personal name-->,<ref>Michael G. Hasel, ''Domination and Resistance: Egyptian Military Activity in the Southern Levant'' (Brill, 1998)</ref> has been variously translated as "he wrestles with God", "he prevails with God",<ref>James P. Boyd, ''Bible dictionary'' (Ottenheimer Publishers, 1958)</ref> or "God rules" (possibly from the same root {{m|he|ש־ר־ה}}/{{m|he|ש־ר־ר}} as {{m|he|שָׂרָה||Sarah}}).<ref>Victor P. Hamilton, ''The Book of Genesis: Chapters 18–50'' (NICOT, Grand Rapids: Eerdmans, 1995)</ref>
@@ -23,7 +22,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 
 ===Proper noun===
 {{en-proper noun|Israels}}
-0559692456
+
 # {{senseid|en|Q801}}The [[State of Israel]], a modern country in the [[Middle East]], at the eastern [[shore]] of the [[Mediterranean]].
 # The {{w|Land of Israel}}, a [[region]] that is roughly [[coextensive]] with the {{w|State of Israel}}.
 # {{lb|en|historical}} An ancient [[kingdom]] that occupied roughly the same area in ancient times.
@@ -35,7 +34,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 # {{surname|en}}
 
 ====Usage notes====
-* {{sense|region}} {{U:en:I-P}}0559692456ب
+* {{sense|region}} {{U:en:I-P}}
 
 ====Synonyms====
 * {{sense|State of Israel}} the [[State of Israel]] {{qualifier|official name}}, [[Jewsrael]] {{qualifier|derogatory}}, [[Zionistan]] {{qualifier|derogatory}}
@@ -58,7 +57,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 ====Related terms====
 * {{l|en|Israelite}}
 * {{l|en|Israelitic}}
-* {{l|en|Israelitish}}يسب
+* {{l|en|Israelitish}}
 
 ====Translations====
 {{trans-top|id=Q801|the state}}
