--- a/en/圱/圱.12979.wikitext
+++ b/en/圱/圱.12979.wikitext
@@ -9,22 +9,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[cin1]]|y=chin1}}
+===Pronunciation===
+{{zh-pron
+|m=qiān,sú
+|c=cin1
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土03}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{lb|zh|Mandarin}} field the size of three li
+# {{lb|zh|Mandarin}} {{ngd|ancient character whose meaning is identical to [[俗]] and [[阡]]}}
+# {{lb|zh|Cantonese}} {{rfdef|zh|sort=土03}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qiān]] ([[qian1]]), [[sú]] ([[su2]])|wg=ch'ien<sup>1</sup>, ch'ang<sup>3</sup>}}
-
-# a field the size of three li
-# ancient character whose meaning is identical to [[俗]] and [[阡]]
