--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -27,7 +27,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 # To gather with the hand, or by drawing toward oneself; to [[pluck]].
 #: ''to '''pull''' fruit from a tree; to '''pull''' flax; to '''pull''' a finch''
 # To [[attract]] or [[net]]; to [[pull in]].
-#* {{rfdate|en}}, {{w|Marcella Ridlen Ray}}, ''Changing and Unchanging Face of United States Civil Society''
+#* '''2002''', {{w|Marcella Ridlen Ray}}, ''Changing and Unchanging Face of United States Civil Society''
 #*: Television, a favored source of news and information, '''pulls''' the largest share of advertising monies.
 # {{lb|en|ambitransitive|UK|Ireland|slang}} To persuade (someone) to have sex with one.<!-- or to be 'on the pull' (willing to have sex)-->
 #: ''I '''pulled''' at the club last night.''
@@ -72,7 +72,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #: ''The favourite was '''pulled'''.''
 # {{lb|en|printing|dated}} To take or make (a [[proof]] or [[impression]]); so called because hand presses were worked by pulling a lever.
 # {{lb|en|cricket|golf}} To strike the ball in a particular manner. (See noun sense.)
-#* {{rfdatek|en|R. H. Lyttelton}}
+#* '''1888''', {{w|Robert Henry Lyttelton}}, ''[[s:Cricket (Steel, Lyttelton)|Cricket]]'' [[s:Cricket (Steel, Lyttelton)/Chapter 2|Chapter 2]]
 #*: Never '''pull''' a straight fast ball to leg.
 # {{lb|en|UK}} To draw beer from a pump, keg, or other source.
 #: ''Let's stop at Finnigan's. The barman '''pulls''' a good pint.''
