--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -387,7 +387,9 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 * Arabic: {{t|ar|عَلَى طُول}}
 *: Hijazi Arabic: {{t|acw|عَلَى طُول|tr=ʿala ṭūl|sc=Arab}}, {{t|acw|دُغْرِي|tr=duḡri|sc=Arab}} {{qualifier|obsolete}}
 * Belarusian: {{t|be|пра́ма}}, {{t|be|про́ста}}
-* Bulgarian: {{t+|bg|направо}}
+* Bulgarian: {{t+|bg|напра́во}}
+* Chinese:
+*" Mandarin: {{t+|cmn|一直|tr=yīzhí}}
 * Czech: {{t+|cs|přímo}}
 * Dutch: {{t+|nl|rechtdoor}}
 * Finnish: {{t+|fi|suoraan}}
@@ -397,11 +399,10 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 *: Ancient: {{t|grc|εὐθύ}}
 * Hebrew: {{t+|he|יָשָׁר|tr=yashár}}
 * Italian: {{t+|it|direttamente}}
-* Japanese: {{t|ja|真っすぐに|tr=massugu ni}}, {{t+|ja|真っ直ぐ|tr=まっすぐ, massugu}}
+* Japanese: {{t+|ja|真っ直ぐ|tr=まっすぐ, massugu}}
 {{trans-mid}}
 * Korean: {{t+|ko|곧장}}, {{t+|ko|똑바로}}
 * Macedonian: {{t|mk|право}}
-* Mandarin: {{t+check|cmn|直|tr=zhí|sc=Hani}}, {{t-check|cmn|直接地|tr=zhíjiē de|sc=Hani}}
 * Neapolitan: {{t|nap|adderitto}}
 * Polish: {{t+|pl|prosto}}
 * Portuguese: {{t+|pt|direto}}
