--- a/en/圲/圲.12980.wikitext
+++ b/en/圲/圲.12980.wikitext
@@ -9,21 +9,22 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[cin1]]|y=chin1}}
+===Pronunciation===
+{{zh-pron
+|m=qiān
+|c=cin1
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土03}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土03}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qiān]] ([[qian1]])|wg=ch'ien<sup>1</sup>}}
-
-# {{rfdef|cmn|sort=土03}}
