--- a/en/圱/圱.12979.wikitext
+++ b/en/圱/圱.12979.wikitext
@@ -25,7 +25,8 @@
 {{zh-hanzi}}
 
 # {{lb|zh|Mandarin}} field the size of three li
-# {{lb|zh|Mandarin}} {{ngd|ancient character whose meaning is identical to [[俗]] and [[阡]]}}
+# {{lb|zh|Mandarin|archaic}} {{syn of|zh|俗|tr=sú}}.
+# {{lb|zh|Mandarin|archaic}} {{syn of|zh|阡|tr=qiān}}.
 # {{lb|zh|Cantonese}} {{rfdef|zh|sort=土03}}
 
 ===References===
