--- a/en/圴/圴.12982.wikitext
+++ b/en/圴/圴.12982.wikitext
@@ -9,14 +9,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zoek3]]|y=jeuk3}}
+===Pronunciation===
+{{zh-pron
+|m=zhuó
+|c=zoek3
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土03}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土03}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
 
 ----
@@ -30,12 +40,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[しゃく]] (shaku), [[さく]] (saku)|kun=[[あと]] (ato)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhuó]] ([[zhuo2]])|wg=cho<sup>2</sup>}}
-
-# {{rfdef|cmn|sort=土03}}
