--- a/en/坃/坃.12998.wikitext
+++ b/en/坃/坃.12998.wikitext
@@ -9,21 +9,22 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[hyun1]]|y=hyun1}}
+===Pronunciation===
+{{zh-pron
+|m=xūn
+|c=hyun1
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土04}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土04}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xūn]] ([[xun1]])|wg=hsün<sup>1</sup>}}
-
-# {{rfdef|cmn|sort=土04}}
