--- a/en/坈/坈.13003.wikitext
+++ b/en/坈/坈.13003.wikitext
@@ -9,21 +9,22 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[haang1]]|y=haang1}}
+===Pronunciation===
+{{zh-pron
+|m=rǒng,kēng
+|c=haang1
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土04}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土04}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[rǒng]] ([[rong3]]), [[kēng]] ([[keng1]])|wg=jung<sup>3</sup>, k'eng<sup>1</sup>}}
-
-# {{rfdef|cmn|sort=土04}}
