--- a/en/坓/坓.13014.wikitext
+++ b/en/坓/坓.13014.wikitext
@@ -1,9 +1,6 @@
 {{character info}}
 ==Translingual==
 
-===Etymology===
-{{Han etym}}
-
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=TTG|ids=⿱井土}}
 
@@ -12,21 +9,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zing6]]|y=jing6}}
+===Glyph origin===
+{{Han etym}}
 
-# {{rfdef|yue|sort=土04}}
+===Pronunciation===
+{{zh-pron
+|m=jǐng,xíng
+|c=zing6
+|mc=y
+|oc=y
+|cat=
+}}
 
-====References====
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh|sort=土04}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jǐng]] ([[jing3]]), [[xíng]] ([[xing2]])|wg=ching<sup>3</sup>, hsing<sup>2</sup>}}
-
-# {{rfdef|cmn|sort=土04}}
