--- a/en/坖/坖.13017.wikitext
+++ b/en/坖/坖.13017.wikitext
@@ -9,21 +9,22 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[gei6]]|y=gei6}}
+===Pronunciation===
+{{zh-pron
+|m=jì
+|c=gei6
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土04}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土04}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jì]] ([[ji4]])|wg=chi<sup>4</sup>}}
-
-# {{rfdef|cmn|sort=土04}}
