--- a/en/坧/坧.13034.wikitext
+++ b/en/坧/坧.13034.wikitext
@@ -12,14 +12,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zek3]]|y=jek3}}
+===Pronunciation===
+{{zh-pron
+|m=zhī
+|c=zek3
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土05}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
@@ -42,15 +52,6 @@
 {{ko-hanja|hangeul=척|rv=cheok|mr=ch'ŏk}}
 
 # {{rfdef|ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhī]] ([[zhi1]])|wg=chih<sup>1</sup>}}
-
-# {{rfdef|cmn|sort=土05}}
 
 ----
 
