--- a/en/坽/坽.13056.wikitext
+++ b/en/坽/坽.13056.wikitext
@@ -9,14 +9,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ling4]]|y=ling4}}
+===Pronunciation===
+{{zh-pron
+|m=líng
+|c=ling4
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土05}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
@@ -30,12 +40,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[れい]] (rei), [[りょう]] (ryō)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[líng]] ([[ling2]])|wg=ling<sup>2</sup>}}
-
-# {{rfdef|cmn|sort=土05}}
