--- a/en/垀/垀.13059.wikitext
+++ b/en/垀/垀.13059.wikitext
@@ -9,14 +9,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[fu1]]|y=fu1}}
+===Pronunciation===
+{{zh-pron
+|m=hū
+|c=fu1
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土05}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
@@ -30,12 +40,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[こ]] (ko), [[く]] (ku)|kun=[[かまへ]] (kamahe), [[わずらはい]] (wazurahai)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[hū]] ([[hu1]])|wg=hu<sup>1</sup>}}
-
-# {{rfdef|cmn|sort=土05}}
