--- a/en/垊/垊.13069.wikitext
+++ b/en/垊/垊.13069.wikitext
@@ -9,12 +9,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[man4]]|y=man4}}
+===Pronunciation===
+{{zh-pron
+|c=man4
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土05}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
