--- a/en/垏/垏.13074.wikitext
+++ b/en/垏/垏.13074.wikitext
@@ -9,14 +9,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[leot6]]|y=leut6}}
+===Pronunciation===
+{{zh-pron
+|m=lù
+|c=leot6
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土06}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土06}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
@@ -30,12 +40,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[ろつ]] (rotsu), [[ろち]] (rochi)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[lù]] ([[lu4]])|wg=lu<sup>4</sup>}}
-
-# {{rfdef|cmn|sort=土06}}
