--- a/en/垑/垑.13077.wikitext
+++ b/en/垑/垑.13077.wikitext
@@ -9,21 +9,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ci2]]|y=chi2}}
+===Glyph origin===
+{{Han etym}}
 
-# {{rfdef|yue|sort=土06}}
+===Pronunciation===
+{{zh-pron
+|m=chǐ
+|c=ci2
+|mc=y
+|oc=y
+|cat=
+}}
 
-====References====
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh|sort=土06}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chǐ]] ([[chi3]])|wg=ch'ih<sup>3</sup>}}
-
-# {{rfdef|cmn|sort=土06}}
