--- a/en/垖/垖.13082.wikitext
+++ b/en/垖/垖.13082.wikitext
@@ -13,14 +13,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[deoi1]]|y=deui1}}
+===Pronunciation===
+{{zh-pron
+|m=duī,shǎng
+|c=deoi1
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土06}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土06}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
@@ -44,12 +54,3 @@
 
 # [[hill]]
 # pile of earth
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[duī]] ([[dui1]]), [[shǎng]] ([[shang3]])|wg=tui<sup>1</sup>, shang<sup>3</sup>}}
-
-# {{rfdef|cmn|sort=土06}}
