--- a/en/垘/垘.13084.wikitext
+++ b/en/垘/垘.13084.wikitext
@@ -9,14 +9,27 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[baak6]]|y=baak6}}
+===Glyph origin===
+{{Han etym}}
 
-# {{rfdef|yue|sort=土06}}
+===Pronunciation===
+{{zh-pron
+|m=fú
+|c=baak6
+|mc=y
+|oc=y
+|cat=
+}}
 
-====References====
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh|sort=土06}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
@@ -30,12 +43,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[ふく]] (fuku), [[ぶく]] (buku), [[ほく]] (hoku), [[ぼく]] (boku)|kun=[[くずれる]] (kuzureru), [[ながれる]] (nagareru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[fú]] ([[fu2]])|wg=fu<sup>2</sup>}}
-
-# {{rfdef|cmn|sort=土06}}
