--- a/en/垞/垞.13090.wikitext
+++ b/en/垞/垞.13090.wikitext
@@ -13,12 +13,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[caa4]]|y=cha4}}
+===Pronunciation===
+{{zh-pron
+|m=chá
+|c=caa4
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土06}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh|sort=土06}}
+
+===References===
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
 
@@ -40,15 +53,6 @@
 {{ko-hanja|hangeul=타|rv=ta|mr=t'a}}
 
 # {{rfdef|ko|sort=土06}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chá]] ([[cha2]])|wg=ch'a<sup>2</sup>}}
-
-# {{rfdef|cmn|sort=土06}}
 
 ----
 
