--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -1,6 +1,6 @@
 {{also|昰}}
 {{character info}}
-==Translingual （Chinese,Korean,Japanese)==
+==Translingual==
 {{stroke order|strokes=9}}
 {{stroke order|type=animate}}
 
