--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -89,6 +89,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |bridge the gap
 |Burscough Bridge
 |Cameron Bridge
+|Carronbridge
 |Conon Bridge
 |covered bridge
 |cross that bridge when one comes to it
