--- a/en/傀/傀.11152.wikitext
+++ b/en/傀/傀.11152.wikitext
@@ -89,10 +89,11 @@ From {{der|ko|ltc|-}} {{ltc-l|傀|id=2}}. {{hanja-hunmong|괴〯|kwoy|人類#중
 # {{hanja form of|괴|[[puppet]]}}
 
 ====Compounds====
-{{top2}}
+{{der-top3|Compounds}}
 * {{ko-l|괴뢰|[[puppet]]|傀儡}}
 * {{ko-l|괴뢰군|[[puppet army]]|傀儡軍}}
-{{bottom}}
+* {{ko-l|북괴|北傀}}
+{{der-bottom}}
 
 ===Etymology 2===
 From {{der|ko|ltc|-}} {{ltc-l|傀|id=1}}.
@@ -100,7 +101,12 @@ From {{der|ko|ltc|-}} {{ltc-l|傀|id=1}}.
 ====Hanja====
 {{ko-hanja|크다|클|괴}}
 
-# {{hanja form of|괴|[[large]]}}
+# {{lb|ko|literary}} {{hanja form of|괴|[[large]]}}
+
+====Compounds====
+{{der-top3|Compounds}}
+* {{ko-l|괴연|傀然}}
+{{der-bottom}}
 
 ===References===
 * {{R:hanjadoc|475}}
