--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -51,7 +51,7 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 # {{lb|en|intransitive|AAVE|slang}} To covertly [[have sex]] with (a person other than one's primary partner); to [[cheat]] ''with''.
 #* {{quote-song|en|year=2000|artist=Shaggy|title=It Wasn't Me|passage=Honey came in and she caught me red-handed / '''Creeping''' with the girl next door / Picture this we were both butt naked / Banging on the bathroom floor}}
 #* {{quote-song|en|year=2003|artist=Mario Winans|title=I Don't Wanna Know|passage=I don't wanna know / If you're playin' me, keep it on the low / 'Cause my heart can't take it anymore / And if you're '''creepin'''', please don't let it show}}
-#* {{quote-song|en|year=2016|artist=Sherika Moore|title=Been Hustlen|passage="Now you want the nigga out 'cause he '''creeping''' with his baby momma."}}
+#* {{quote-book|en|year=2016|author=Sherika Moore|isbn=9781524503598|title=Been Hustlen|passage="Now you want the nigga out 'cause he '''creeping''' with his baby momma."}}
 
 =====Derived terms=====
 {{der-top}}
