--- a/en/惲/惲.15623.wikitext
+++ b/en/惲/惲.15623.wikitext
@@ -15,6 +15,7 @@
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|心|alt1=忄|軍|ls=psc|c1=s|t1=heart|c2=p}}.
 
 ===Pronunciation===
 {{zh-pron
@@ -28,8 +29,8 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# to [[devise]]; to [[plan]]; to [[deliberate]]
-# to [[consult]]
+# {{zh-o}} to [[devise]]; to [[plan]]; to [[deliberate]]
+# {{zh-o}} to [[consult]]
 # {{surname|zh}}
 #: {{zh-x|^惲 ^代-英|{{w|Yun Daiying|'''Yun''' Daiying}}, early leader of the Communist Party of China}}
 
