--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -16,8 +16,9 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 #: {{ux|en|Can you '''count''' to a hundred?}} {{ux|en|The psychiatrist asked her to '''count''' down from a hundred by sevens.}}
 # {{lb|en|transitive}} To determine the [[number]] (of objects in a group).
 #: {{ux|en|There are three apples; '''count''' them.}}
+#* {{RQ:Browning Poems|edition=new|volume=II|poem=Sonnets from the Portuguese|sonnet=XLII|page=479|passage=How do I love thee? Let me '''count''' the ways.}}
 # {{lb|en|intransitive}} To be of [[significance]]; to [[matter]].
-#: {{ux|en|Your views don't '''count''' here.&nbsp;&nbsp; It does '''count''' if you cheat with someone when you're drunk.}}
+#: {{ux|en|Your views don’t '''count''' here.&emsp;&emsp;&emsp; It does '''count''' if you cheat with someone when you’re drunk.}}
 # {{lb|en|intransitive}} To be an [[example]] of something: {{n-g|often followed by {{m|en|as}} and an indefinite noun}}.
 #* {{rfdatek|en|J. A. Symonds}}
 #*: This excellent man {{...}} '''counted''' among the best and wisest of English statesmen.
