--- a/en/垕/垕.13081.wikitext
+++ b/en/垕/垕.13081.wikitext
@@ -17,19 +17,22 @@
 ===Glyph origin===
 {{Han etym}}
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
 |m=hòu
-|c=hau6,hau5
+|c=hau6
 |mc=y
 |oc=y
 |cat=
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # {{rfdef|zh|sort=土06}}
+
+===Pronunciation 2===
+{{zh-see|厚|v}}
 
 ===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
