--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -96,7 +96,7 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 {{trans-bottom}}
 
 {{trans-top|curved line}}
-* Albanian: {{t-needed|sq}}
+* Albanian: {{t|sq|kthesë|f}}
 * Arabic: {{t-needed|ar}}
 * Armenian: {{t-needed|hy}}
 * Bulgarian: {{t|bg|крива линия|f}}
