--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -461,6 +461,15 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 
 ----
 
+==Plautdietsch==
+
+===Noun===
+{{head|pdt|proper noun|g=n}}
+
+# [[Israel]]
+
+----
+
 ==Portuguese==
 
 ===Etymology===
