--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -198,7 +198,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * Veps: {{t|vep|Izrail'}}
 * Vietnamese: {{t|vi|I-xra-en}}
 * Volapük: {{t|vo|Yisraelän}}
-* Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}
+* Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}, {{t|yi|מדינת־ישׂראל|f|tr=medines-yisroel}}
 * Yoruba: {{t|yo|Iserẹli}}
 {{trans-bottom}}
 
