--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -6,7 +6,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 ===Pronunciation===
 * {{a|RP}} {{enPR|nyoo͞-zē'lənd}}, {{IPA|en|/nju ˈziː.lənd/|/ˌnjuː -/}}
 * {{a|GA}} {{enPR|noo͞-zē'lənd}}, {{IPA|en|/nu ˈzi.lənd/|/ˌnu -/}}
-* {{a|GNZ}} {{IPA|en|/njʉː ˈziːlɘnd/|/ˌnjʉː -/|/nʉː -/|/ˌnʉː -/}}
+* {{a|GNZ}} {{IPA|en|/njʉː zeəlɘnd/|/ˌnjʉː -/|/- ˈziː-/}}
 * {{audio|en|en-us-New Zealand.ogg|Audio (US)}}
 {{rfap|en|British and New Zealand}}
 * {{hyphenation|en|New Zea|land}}
