--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -19,29 +19,31 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 {{en-verb}}
 [[File:Back on the road.jpg|thumb|'''Pulling''' a car from the mud with a rope (1)]]
 # {{lb|en|transitive|intransitive}} To apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force.
-#: ''When I give the signal, '''pull''' the rope.''
-#: ''You're going to have to '''pull''' harder to get that cork out of the bottle.''
+#: {{ux|en|When I give the signal, '''pull''' the rope.}}
+#: {{ux|en|You're going to have to '''pull''' harder to get that cork out of the bottle.}}
 #* {{RQ:KJV|Genesis|8|9}}
 #*: He put forth his hand {{...}} and '''pulled''' her in.
 #* {{RQ:Shakespeare Macbeth|IV|iii|passage=Ne'er '''pull''' your hat upon your brows.}}
 # To gather with the hand, or by drawing toward oneself; to [[pluck]].
-#: ''to '''pull''' fruit from a tree; to '''pull''' flax; to '''pull''' a finch''
+#: {{ux|en|to '''pull''' fruit from a tree}}
+#: {{ux|en|'''pull''' flax}}
+#: {{ux|en|'''pull''' a finch}}
 # To [[attract]] or [[net]]; to [[pull in]].
 #* '''2002''', {{w|Marcella Ridlen Ray}}, ''Changing and Unchanging Face of United States Civil Society''
 #*: Television, a favored source of news and information, '''pulls''' the largest share of advertising monies.
 # {{lb|en|ambitransitive|UK|Ireland|slang}} To persuade (someone) to have sex with one.<!-- or to be 'on the pull' (willing to have sex)-->
-#: ''I '''pulled''' at the club last night.''
-#: ''He's '''pulled''' that bird over there.''
+#: {{ux|en|I '''pulled''' at the club last night.}}
+#: {{ux|en|He's '''pulled''' that bird over there.}}
 # {{lb|en|transitive}} To [[remove]] (something), especially from public [[circulation]] or [[availability]].
-#: ''Each day, they '''pulled''' the old bread and set out fresh loaves.''
-#: ''The book was due to be released today, but it was '''pulled''' at the last minute over legal concerns.''
+#: {{ux|en|Each day, they '''pulled''' the old bread and set out fresh loaves.}}
+#: {{ux|en|The book was due to be released today, but it was '''pulled''' at the last minute over legal concerns.}}
 # {{lb|en|transitive}} To [[retrieve]] or [[generate]] for use.
-#: ''I'll have to '''pull''' a part number for that.''
+#: {{ux|en|I'll have to '''pull''' a part number for that.}}
 #* '''2006''', Michael Bellomo, Joel Elad, ''How to Sell Anything on Amazon...and Make a Fortune!''
 #*: They'll go through their computer system and '''pull''' a report of all your order fulfillment records for the time period you specify.
 # {{lb|en|transitive|informal}} To [[do]] or [[perform]].
-#: ''He regularly '''pulls''' 12-hour days, sometimes 14.''
-#: ''You'll be sent home if you '''pull''' another stunt like that.''
+#: {{ux|en|He regularly '''pulls''' 12-hour days, sometimes 14.}}
+#: {{ux|en|You'll be sent home if you '''pull''' another stunt like that.}}
 # {{lb|en|with 'a' and the name of a person, place, event, etc.}} To [[copy]] or [[emulate]] the actions or [[behaviour]] that is associated with the person or thing mentioned.
 #: {{ux|en|He '''pulled''' an Elvis and got really fat.}}
 #: {{ux|en|They're trying to '''pull''' a {{w|Watergate scandal|Watergate}} on us.}}
@@ -75,7 +77,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #* '''1888''', {{w|Robert Henry Lyttelton}}, ''[[s:Cricket (Steel, Lyttelton)|Cricket]]'' [[s:Cricket (Steel, Lyttelton)/Chapter 2|Chapter 2]]
 #*: Never '''pull''' a straight fast ball to leg.
 # {{lb|en|UK}} To draw beer from a pump, keg, or other source.
-#: ''Let's stop at Finnigan's. The barman '''pulls''' a good pint.''
+#: {{ux|en|Let's stop at Finnigan's. The barman '''pulls''' a good pint.}}
 # {{lb|en|rail transportation|US|of a railroad car}} To [[pull out]] from a [[yard]] or [[station]]; to [[leave]].
 # {{lb|en|now|chiefly|Scotland|England|and|US|_|regional}} To [[pluck]] or [[pick]] (flowers, fruit etc.).
 #*'''1751''', {{w|Tobias Smollett}}, ''The Adventures of Peregrine Pickle'', I.19:
@@ -310,26 +312,26 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #* {{RQ:Swift Gulliver|part=I|chapter=1}}
 #*: I found myself suddenly awaked with a violent '''pull''' upon the ring, which was fastened at the top of my box.
 # An [[attractive]] [[force]] which causes [[motion]] towards the source
-#: ''The spaceship came under the '''pull''' of the gas giant.''
-#: ''iron fillings drawn by the '''pull''' of a magnet''
-#: ''She took a '''pull''' on her cigarette.''
+#: {{ux|en|The spaceship came under the '''pull''' of the gas giant.}}
+#: {{ux|en|iron fillings drawn by the '''pull''' of a magnet}}
+#: {{ux|en|She took a '''pull''' on her cigarette.}}
 # Any device meant to be pulled, as a [[lever]], [[knob]], [[handle]], or [[rope]]
-#: ''a zipper '''pull'''''
+#: {{ux|en|a zipper '''pull'''}}
 # {{lb|en|slang|dated}} Something in one's favour in a comparison or a contest; an advantage; means of influencing.
-#: ''In weights the favourite had the '''pull'''.''
-# [[appeal|Appeal]] or [[attraction]] (as of a movie star)
+#: {{ux|en|In weights the favourite had the '''pull'''.}}
+# [[appeal|Appeal]] or [[attraction]] (e.g. of a movie star)
 # {{lb|en|Internet|uncountable}} The situation where a [[client]] sends out a request for data from a [[server]], as in ''server pull'', ''pull technology''
 # A journey made by [[row]]ing
 #* '''1874''', {{w|Marcus Clarke}}, {{w|For the Term of His Natural Life}} Chapter V
 #*: As Blunt had said, the burning ship lay a good twelve miles from the Malabar, and the '''pull''' was a long and a weary one. Once fairly away from the protecting sides of the vessel that had borne them thus far on their dismal journey, the adventurers seemed to have come into a new atmosphere.
 # {{lb|en|dated}} A [[contest]]; a [[struggle]].
-#: ''a wrestling '''pull'''''
+#: va wrestling '''pull'''}}
 #: {{rfquotek|en|Carew}}
 # {{lb|en|obsolete|poetic}} Loss or violence suffered.
 #* {{RQ:Shakespeare Henry 6-2|II|iii|passage=Two '''pulls''' at once; / His lady banished, and a limb lopped off.}}
 # {{lb|en|colloquial}} The act of drinking; a [[mouthful]] or [[swig]] of a drink.
 #* {{quote-book|en|year=1996|author=Jon Byrell|title=Lairs, Urgers and Coat-Tuggers| publisher=Ironbark| location=Sydney| page=294| passage=Sutho took a '''pull''' at his Johnny Walker and Coke and laughed that trademark laugh of his and said: `Okay. I'll pay that all right.'}}
-#: ''to take a pull at a mug of beer''
+#: {{ux|en|to take a pull at a mug of beer}}
 #: {{rfquotek|en|Charles Dickens}}
 # {{lb|en|cricket}} A kind of stroke by which a leg ball is sent to the off side, or an off ball to the side.
 #* {{rfdatek|en|R. A. Proctor}}
