--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -2,7 +2,7 @@
 ==Hebrew==
 
 ===Etymology===
-From {{inh|he|sem-pro|*ʾarṣ́-}}. Compare {{cog|ar|أَرْض}} and {{cog|arc|אַרְעָא}}.
+From {{inh|he|sem-pro|*ʾarṣ́-}}. Compare {{cog|ar|أرض}} and {{cog|arc|אַרְעָא}}.
 
 ===Pronunciation===
 * {{a|IL}} {{IPA|he|/ˈeʁet͡s/}}
