--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -174,7 +174,10 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 ==Korean==
 
 ===Etymology===
-From {{der|ko|ltc|-}} {{ltc-l|春|id=1}}. {{hanja-hunmong|츈|chyun|天文#상01B}}
+From {{der|ko|ltc|-}} {{ltc-l|春}}. {{hanja-hunmong|츈|chyun|天文#상01B}}
+
+===Pronunciation===
+{{ko-hanja-pron|춘|t͡ɕʰun}}
 
 ===Hanja===
 {{ko-hanja-search}}
