--- a/en/倦/倦.11036.wikitext
+++ b/en/倦/倦.11036.wikitext
@@ -25,6 +25,7 @@ Compare {{cog|bo|ཀྱོར་ཀྱོར||weak; feeble}}, {{cog|bo|ཁྱོ
 {{zh-pron
 |m=juàn
 |c=gyun6
+|h=pfs=khien
 |mn=qz,tw,xm:koān/qz,xm,zz:koàn
 |mc=y
 |oc=y
