--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -66,6 +66,9 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 # {{lb|en|chiefly|North American||intransitive|slang}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency. {{defdate|from 20th c.}}
 #* {{quote-book  |en |chapter=[letter to Steve Geller] |date=1970-01-08 |year_published=2000 |title=Fear and Loathing in America  |page=251 |url=https://archive.org/details/fearloathinginam00thom/page/250/mode/2up |publisher=Simon & Schuster |location=New York |isbn=9780684873152 |author=Hunter S. Thompson |authorlink=Hunter S. Thompson|passage=it has a few very high points . . . but as a novel, it '''sucks'''}}
 
+=====Conjugation=====
+{{en-conj-simple}}
+
 ====Synonyms====
 {{checksense|en}}
 * To [[draw]]
