--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -79,6 +79,10 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * Welsh: {{t|cy|sbelt|m}}
 {{trans-bottom}}
 
+=====Descendants=====
+* {{desc|ga|speilt|bor=1}}
+* {{desc|cy|sbelt|bor=1}}
+
 ===Etymology 3===
 From {{der|en|gmh|spalden}}, or {{der|en|non|spald}}.
 
